# ASTD

./: .gitignore  Builder.cmake  CMakeLists.txt  FindASTD.cmake  LICENSE  README.md  launch.json
ASTD/: ASTDBuild.cmake
ASTD/Source/: ASTD.h
ASTD/Source/Algo/: Memory.h  Sort.h
ASTD/Source/Algo/Internals/: SortInternals.h
ASTD/Source/Containers/: STDTypes.h
ASTD/Source/Containers/Array/: Array.h  ArrayIterator.h
ASTD/Source/Containers/InitializerList/: InitializerList.h
ASTD/Source/Containers/Internals/: ContainerInternals.h
ASTD/Source/Containers/Optional/: Optional.h
ASTD/Source/Containers/Queue/: Queue.h
ASTD/Source/Containers/Set/: Set.h
ASTD/Source/Containers/String/: String.h
ASTD/Source/Core/: CString.h  Math.h  Memory.h  Time.h  Types.h
ASTD/Source/Core/Platform/: PlatformCString.h  PlatformDefinitions.h  PlatformMemory.h  PlatformTime.h  PlatformTypes.h
ASTD/Source/Core/Type/: TypeHash.h  TypeMethods.h  TypeTraits.h  TypeTraitsMacros.h
ASTD/Source/Log/: LogUtilities.h  Logger.h  LoggerUtilities.h
ASTD/Source/Log/Internals/: LoggerTypeTraits.h
ASTD/Source/Math/: MathUtilities.h
ASTD/Source/Memory/: MemoryUtilities.h
ASTD/Source/Platform/: PlatformCString.h  PlatformDefinitions.h
ASTD/Source/Platform/Generic/: GenericCString.h  GenericMemory.h  GenericTime.h
ASTD/Source/Platform/Linux/: LinuxCString.h  LinuxDefinitions.h  LinuxMemory.h  LinuxTypes.h
ASTD/Source/Platform/Win32/: WindowsCString.h  WindowsDefinitions.h  WindowsMath.h  WindowsMemory.h  WindowsTime.h  WindowsTypes.h
ASTD/Source/Private/: libmain.cpp  main.cpp
ASTD/Source/Private/Shared/: SharedClass.cpp  SharedClassInternals.h  SharedObjectInternals.h
ASTD/Source/Private/TypeTraits/: TypeTraitsCore.h  TypeTraitsInternals.h
ASTD/Source/Private/Utilities/: EnsuresInternals.h
ASTD/Source/Public/: ASTD.h  ASTDBuild.h  ASTDContainers.h  ASTDCore.h  ASTDMath.h  ASTDMinimal.h  ASTDPlatform.h  ASTDShared.h  ASTDTypeTraits.h  ASTDUtilities.h  STDMinimal.h
ASTD/Source/Public/Containers/: ContainerTypes.h
ASTD/Source/Public/Macros/: AlternityMacros.h
ASTD/Source/Public/Types/: Types.h
ASTD/Source/Shared/: SharedClass.h  SharedObject.h  SharedUtils.h
ASTD/Source/String/: CStringUtilities.h  CharUtilities.h
ASTD/Source/Type/: TypeHash.h  TypeUtilities.h
ASTD/Source/TypeTraits/: TypeMethods.h  TypeTraits.h  TypeTraitsMacros.h
ASTD/Source/Utilities/: Ensures.h
ASTD/Source/Validation/: Check.h  IsValid.h  Validation.h
Scripts/: BuildProject.bat  BuildProject.sh  GenerateProjectFiles.bat  GenerateProjectFiles.sh
Scripts/CMake/: Configuration.cmake  ProjectFiles.cmake
TestProj/: TestProjBuild.cmake
TestProj/Source/Private/: main.cpp
include/: ASTD.h
include/ASTD/: ASTD.h  ASTDMinimal.h  Archive.h  ArchiveUtils.h  Array.h  ArrayAllocator.h  ArrayArchive.h  BufferArchive.h  Build.h  CString.h  Check.h  FileArchive.h  FixedArrayAllocator.h  IsValid.h  Math.h  Memory.h  Misc.h  Optional.h  PrintArchive.h  Queue.h  QueueAllocator.h  Shared.h  SharedClass.h  SharedObject.h  SharedUtils.h  StdoutArchive.h  String.h  Time.h  TypeMethods.h  TypeTraits.h  TypeTraitsMacros.h
include/ASTD/Apple/: AppleBuild.h  AppleCString.h  AppleMemory.h  AppleMisc.h
include/ASTD/Core/: Build.h  Configuration.h
include/ASTD/Internal/: ChecksInternals.h  SharedClassInternals.h  SharedObjectInternals.h  TypeTraitsConstruct.h  TypeTraitsContainers.h  TypeTraitsCore.h  TypeTraitsInternals.h  TypeTraitsIsType.h
include/ASTD/Linux/: LinuxBuild.h  LinuxCString.h  LinuxMemory.h  LinuxMisc.h
include/ASTD/Win32/: WindowsBuild.h  WindowsCString.h  WindowsMemory.h  WindowsMisc.h
include/ASTD/_internal/: BuildConfiguration.h  BuildPlatform.h  BuildTypes.h  ChecksInternals.h  MacroInternals.h  SharedClassInternals.h  SharedObjectInternals.h  SharedReferencer.h  SharedTypeTraits.h  TypeFowards.h  TypeTraitsConstruct.h  TypeTraitsContainers.h  TypeTraitsCore.h  TypeTraitsInternals.h  TypeTraitsIsType.h
include/Algo/: Memory.h  Sort.h
include/Algo/Internals/: SortInternals.h
include/Containers/: STDTypes.h
include/Containers/Array/: Array.h
include/Containers/InitializerList/: InitializerList.h
include/Containers/Optional/: Optional.h
include/Containers/Queue/: Queue.h
include/Containers/Set/: Set.h
include/Containers/String/: String.h
include/Core/: CString.h  Math.h  Memory.h  Time.h  Types.h
include/Core/Platform/: PlatformCString.h  PlatformDefinitions.h  PlatformMemory.h  PlatformTime.h  PlatformTypes.h
include/Core/Type/: TypeHash.h  TypeMethods.h  TypeTraits.h  TypeTraitsMacros.h
include/Log/: Logger.h
include/Log/Internals/: LoggerTypeTraits.h
include/Shared/: SharedClass.h  SharedObject.h  SharedUtils.h
include/Shared/Internals/: SharedClassInternals.h  SharedObjectInternals.h
include/Validation/: Check.h  IsValid.h
include/Validation/Internals/: ChecksImpl.h
(+138 files in other folders)
